Убрал всю кастомную анимацию и переехал на геколибу. Когда-то потом откажусь от нее. Допилил приманку, квина на очереди. Так же сделал подсказку кастомную, с интерполированием анимации вокруг ее

--- a/gradle.properties
+++ b/gradle.properties
@@ -43,3 +43,7 @@ mod_group_id=com.arcanc.biomorphosis
 mod_authors=ArcAnc, Qriq
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Biomorphosis - a mod about mutations and evolution, where you control an organic ecosystem, creating structures and creatures from living matter. Harness biomass to develop your colony, but be prepared for the dangers your experiments may bring.
+
+geckolib_version=4.8
+rei_version=18.0.796
+jade_version=324717:6011327
