--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,21 @@ group = mod_group_id
 
 repositories {
     mavenLocal()
+    maven {
+        name = 'GeckoLib'
+        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+        content {
+            includeGroup("software.bernie.geckolib")
+        }
+    }
+    maven {
+        name = 'REI'
+        url "https://maven.shedaniel.me/"
+    }
+    maven {
+        name = 'CurseMaven'
+        url "https://beta.cursemaven.com"
+    }
 }
 
 base {
@@ -134,6 +149,10 @@ dependencies {
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
+
+    runtimeOnly "me.shedaniel:RoughlyEnoughItems-neoforge:${rei_version}"
+    implementation "curse.maven:jade-${jade_version}"
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
@@ -150,7 +169,10 @@ var generateModMetadata = tasks.register("generateModMetadata", ProcessResources
             mod_license            : mod_license,
             mod_version            : mod_version,
             mod_authors            : mod_authors,
-            mod_description        : mod_description
+            mod_description        : mod_description,
+            geckolib_version       : geckolib_version,
+            rei_version            : rei_version,
+            jade_version           : jade_version
     ]
     inputs.properties replaceProperties
     expand replaceProperties
