--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.configuration-cache=true
 #read more on this at https://github.com/neoforged/ModDevGradle?tab=readme-ov-file#better-minecraft-parameter-names--javadoc-parchment
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
 parchment_minecraft_version=1.21.4
-parchment_mappings_version=2025.02.16
+parchment_mappings_version=2025.03.23
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
@@ -18,9 +18,9 @@ minecraft_version=1.21.4
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.21.4, 1.22)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.4.94-beta
+neo_version=21.4.133
 # The Neo version range can use any version of Neo as bounds
-neo_version_range=[21.4.0-beta,)
+neo_version_range=[21.4.133,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[4,)
 
@@ -45,5 +45,5 @@ mod_authors=ArcAnc, Qriq
 mod_description=Biomorphosis - a mod about mutations and evolution, where you control an organic ecosystem, creating structures and creatures from living matter. Harness biomass to develop your colony, but be prepared for the dangers your experiments may bring.
 
 geckolib_version=4.8.4
-rei_version=18.0.798
+rei_version=18.0.804
 jade_version=324717:6170888
