--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -22,3 +22,7 @@ protected net.minecraft.world.entity.EntityType$Builder velocityUpdateSupplier
 protected net.minecraft.world.entity.EntityType$Builder trackingRangeSupplier
 protected net.minecraft.world.entity.EntityType$Builder updateIntervalSupplier
 protected net.minecraft.world.entity.EntityType$Builder onlyOpCanSetNbt
+
+public net.minecraft.world.level.Level getEntities()Lnet/minecraft/world/level/entity/LevelEntityGetter;
+public net.minecraft.client.multiplayer.ClientLevel getEntities()Lnet/minecraft/world/level/entity/LevelEntityGetter;
+public net.minecraft.server.level.ServerLevel getEntities()Lnet/minecraft/world/level/entity/LevelEntityGetter;
