Прикрутил гуи для мультиблока. Просто как таковое. Теперь надо его доработать и красиво сделать

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -26,3 +26,9 @@ protected net.minecraft.world.entity.EntityType$Builder onlyOpCanSetNbt
 public net.minecraft.world.level.Level getEntities()Lnet/minecraft/world/level/entity/LevelEntityGetter;
 public net.minecraft.client.multiplayer.ClientLevel getEntities()Lnet/minecraft/world/level/entity/LevelEntityGetter;
 public net.minecraft.server.level.ServerLevel getEntities()Lnet/minecraft/world/level/entity/LevelEntityGetter;
+
+protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen clickedSlot
+protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen draggingItem
+protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen isSplittingStack
+protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen quickCraftingType
+protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen recalculateQuickCraftRemaining()V
