--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -11,7 +11,7 @@ displayName="${mod_name}"
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 
 displayURL="https://github.com/ArcAnc/Biomorphosis"
-#logoFile="examplemod.png"
+logoFile="logo.png"
 #credits=""
 authors="${mod_authors}"
 description='''${mod_description}'''
