Кнопка и рецепты для чамбера. Осталось прописать код его работы, сделать модель морфа и базовой клетки и закончу с этим

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -32,3 +32,5 @@ protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen dra
 protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen isSplittingStack
 protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen quickCraftingType
 protected net.minecraft.client.gui.screens.inventory.AbstractContainerScreen recalculateQuickCraftRemaining()V
+public net.minecraft.client.gui.GuiGraphics innerBlit(Ljava/util/function/Function;Lnet/minecraft/resources/ResourceLocation;IIIIFFFFI)V
+public net.minecraft.client.gui.GuiGraphics bufferSource
