Первая интеграция JEI для чамбера + немного мелких фиксов
Signed-off-by: ArcAnc <ArcAnc13@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -45,5 +45,5 @@ mod_authors=ArcAnc, Qriq
 mod_description=Biomorphosis - a mod about mutations and evolution, where you control an organic ecosystem, creating structures and creatures from living matter. Harness biomass to develop your colony, but be prepared for the dangers your experiments may bring.
 
 geckolib_version=4.8.4
-rei_version=18.0.804
+jei_version=20.0.0.4
 jade_version=324717:6170888
