Пофиксил генерацию деревни. Так же изменил слегка мультиблоки. Теперь они могут в воксель шейп изначального блока. Но нужно перейт на полностью кастомный. И выпилить блок стейты в пользу айтем стака

--- a/build.gradle
+++ b/build.gradle
@@ -176,6 +176,7 @@ var generateModMetadata = tasks.register("generateModMetadata", ProcessResources
             geckolib_version       : geckolib_version,
             jei_version            : jei_version,
             jade_version           : jade_version
+//            terrablender_version   : terrablender_version
     ]
     inputs.properties replaceProperties
     expand replaceProperties
