--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ mod_name=Biomorphosis
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=Arc`s License of Common Sense
 # The mod version. See https://semver.org/
-mod_version=0.0.4
+mod_version=0.0.5
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -47,3 +47,4 @@ mod_description=Biomorphosis - a mod about mutations and evolution, where you co
 geckolib_version=4.8.5
 jei_version=20.0.0.4
 jade_version=324717:6170888
+# terrablender_version=4.3.0.2
