--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -36,3 +36,11 @@ public net.minecraft.client.gui.GuiGraphics innerBlit(Ljava/util/function/Functi
 public net.minecraft.client.gui.GuiGraphics bufferSource
 
 public net.minecraft.client.Minecraft fontManager
+protected net.minecraft.client.gui.components.CycleButton <init>(IIIILnet/minecraft/network/chat/Component;Lnet/minecraft/network/chat/Component;ILjava/lang/Object;Lnet/minecraft/client/gui/components/CycleButton$ValueListSupplier;Ljava/util/function/Function;Ljava/util/function/Function;Lnet/minecraft/client/gui/components/CycleButton$OnValueChange;Lnet/minecraft/client/OptionInstance$TooltipSupplier;Z)V
+protected net.minecraft.client.gui.components.CycleButton$Builder initialIndex
+protected net.minecraft.client.gui.components.CycleButton$Builder initialValue
+protected net.minecraft.client.gui.components.CycleButton$Builder valueStringifier
+protected net.minecraft.client.gui.components.CycleButton$Builder tooltipSupplier
+protected net.minecraft.client.gui.components.CycleButton$Builder narrationProvider
+protected net.minecraft.client.gui.components.CycleButton$Builder values
+protected net.minecraft.client.gui.components.CycleButton$Builder displayOnlyValue
