--- a/gradle.properties
+++ b/gradle.properties
@@ -7,22 +7,22 @@ org.gradle.configuration-cache=true
 
 #read more on this at https://github.com/neoforged/ModDevGradle?tab=readme-ov-file#better-minecraft-parameter-names--javadoc-parchment
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
-parchment_minecraft_version=1.21.4
-parchment_mappings_version=2025.03.23
+parchment_minecraft_version=1.21.1
+parchment_mappings_version=2024.11.17
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
-minecraft_version=1.21.4
+minecraft_version=1.21.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.21.4, 1.22)
+minecraft_version_range=[1.21.1]
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.4.154
+neo_version=21.1.219
 # The Neo version range can use any version of Neo as bounds
-neo_version_range=[21.4.154,)
+neo_version_range=[21.1.219,)
 # The loader version range can only use the major version of FML as bounds
-loader_version_range=[4,)
+loader_version_range=[1,)
 
 ## Mod Properties
 
@@ -44,6 +44,6 @@ mod_authors=ArcAnc, Qriq
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Biomorphosis - a mod about mutations and evolution, where you control an organic ecosystem, creating structures and creatures from living matter. Harness biomass to develop your colony, but be prepared for the dangers your experiments may bring
 
-geckolib_version=4.8.5
-jei_version=20.0.0.4
-jade_version=324717:6170888
+geckolib_version=4.8.3
+jei_version=19.27.0.340
+jade_version=324717:7545219
